<resources>
    <string name="app_name">Database2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_loggedin">Loggedin</string>
    <string name="title_activity_database_helper">DatabaseHelper</string>
    <string name="title_activity_float">Float</string>
    <string name="title_activity_start">Start</string>
    <string name="title_activity_single_view">SingleView</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_navmenu">Navmenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="no_progress_made_or_survey_done_and_id_cards_given_in_10_wards">question1</string>
    <string name="id_cards_given_and_deployed_in_50_69_wards">r12</string>
    <string name="id_cards_given_and_deployed_in_70_wards">r11</string>
    <string name="_2_whether_sweeping_under_taken_twice_a_day_in_all_notified_commercial_areas_including_night_sweeping">q2</string>
    <string name="sweeping_in_75_of_notified_commercial_areas">r21</string>
    <string name="sweeping_in_40_75_of_notified_commercial_areas">r22</string>
    <string name="sweeping_in_40_of_wards">r23</string>
    <string name="availability_of_litter_bins_at_appropriate_places_in_commercial_areas">q3</string>
    <string name="_100_coverage_of_commercial_areas_with_litter_bins_on_both_sides_if_located_on_a_road_city_is_bin_free">r31</string>
    <string name="_30_99_coverage_of_commercial_areas_with_litter_bins_on_both_sides_if_located_on_a_road">r32</string>
    <string name="city_not_bin_free_30_bins">r33</string>
    <string name="all_wards_residential_amp_commercial_are_covered_by_door_to_door_solid_waste_collection_system">q4</string>
    <string name="_100_of_wards">r41</string>
    <string name="_40_99_of_wards">r42</string>
    <string name="below_40">r43</string>
    <string name="q1">1.Are Informal WastePickers are engaged ?</string>
    <string name="r11"><![CDATA[ID Cards given and deployed in > 70 % wards]]></string>
    <string name="r12">ID Cards given and deployed in 40-70% wards</string>
    <string name="r13"><![CDATA[No progress made OR survey done and ID Cards given in <40% wards]]></string>
    <string name="q2">2.Whether sweeping under taken twice a day in all notified commercial areas(including night sweeping)</string>
    <string name="r21"><![CDATA[Sweeping in >75% of Notified Commercial Areas]]></string>
    <string name="r22">Sweeping in 40-70% of Notified Commercial Areas</string>
    <string name="r23"><![CDATA[Sweeping in <40% of wards]]></string>
    <string name="q3">3.Availability of litter bins at appropriate places in commercial areas</string>
    <string name="r31">100 % coverage of commercial areas with litter bins (on both sides if located on a road)/ City is Bin Free</string>
    <string name="r32">50-99% coverage of commercial areas with litter bins (on both sides if located on a road)</string>
    <string name="r33">City not bin-free, but no bin placed</string>
    <string name="q4"><![CDATA[4.All wards (Residential & Commercial), are covered by door to door/ solid waste collection system]]></string>
    <string name="r41">100% of wards</string>
    <string name="r42">60%-79% of wards</string>
    <string name="r43"><![CDATA[<60% of wards]]></string>
    <string name="title_activity_new_logged_in">NewLoggedIn</string>
</resources>
