<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/feedbackname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dip"
            android:text="Feedback Form"
            android:textColor="@color/colorAccent"
            android:textColorLink="@color/colorAccent"
            android:textIsSelectable="false"
            android:textSize="30sp">

        </TextView>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/feedbackname"
            android:layout_marginTop="41dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:text="@string/q1"
                android:textSize="18sp">

            </TextView>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/r11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r11" />

                <RadioButton
                    android:id="@+id/r12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r12" />

                <RadioButton
                    android:id="@+id/r13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r13" />
            </RadioGroup>

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:text="@string/q2"></TextView>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/r21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r21" />

                <RadioButton
                    android:id="@+id/r22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r22" />

                <RadioButton
                    android:id="@+id/r23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r23" />
            </RadioGroup>

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:text="@string/q3"></TextView>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/r31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r31" />

                <RadioButton
                    android:id="@+id/r32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r32" />

                <RadioButton
                    android:id="@+id/r33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r33" />
            </RadioGroup>

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:text="@string/q4"></TextView>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/r41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r41" />

                <RadioButton
                    android:id="@+id/r42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r42" />

                <RadioButton
                    android:id="@+id/r43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r43" />
                </RadioGroup>

            <Button
                android:id="@+id/feedsub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit" />



        </LinearLayout>
    </RelativeLayout>

</ScrollView>